--- a/slides/slides_32.Rmd
+++ b/slides/slides_32.Rmd
@@ -272,7 +272,7 @@ Then the joint probability distribution can be described as:
 | HT           | 1/4             | 1           | 0            |
 | HH           | 1/4             | 1           | 1            |
 
-and,
+or, considering the joint PMF,
 
 
 $$
@@ -637,7 +637,7 @@ ggplot(plotdata, aes(x = x, y = fx)) +
 
 $$
 \begin{align}
-\textrm{E}[X] & = \sum_x x fx \\\\
+\textrm{E}[X] & = \sum_x x f(x) \\\\
 & = 0 \times \frac{1}{16} + 1 \times \frac{3}{8} + 2 \times \frac{9}{16}\\\
 & = \frac{24}{16}\\\
 & = 1.5
