lecture 2.2 materials and ps1 solutions

--- a/slides/slides_22.Rmd
+++ b/slides/slides_22.Rmd
@@ -183,6 +183,14 @@ Mission accomplished!
 
 ## Advanced version 
 
+```{r, eval = F}
+vdw
+```
+
+```{r, echo = F}
+vdw %>% print(n = 4)
+```
+
 ```{r}
 vdw %>% 
   pivot_longer(cols = polyarchy_1980:gdppc_2015,
@@ -224,6 +232,8 @@ codes %>%
 
 ---
 
+We want to merge these:
+
 ```{r}
 tidy_vd %>% 
   select(country_name, country_text_id, year, polyarchy, gdppc) %>% 
@@ -236,8 +246,8 @@ codes %>%
   print(n = 4)
 ```
 
-
-We want to merge `codes` into `tidy_vd`: wherever `country_text_id` in `tidy_vd` matches `Three_Letter_Country_Code` in `codes`, we want to add the `Continent_Name` from `codes`.    
+i.e. we want to add the `Continent_Name` column from `codes` to `tidy_vd`.
+<!-- We want to merge `codes` into `tidy_vd`: wherever `country_text_id` in `tidy_vd` matches `Three_Letter_Country_Code` in `codes`, we want to add the `Continent_Name` from `codes`.     -->
 
 ---
 
